--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1 class="title degradado">Tienda Depeortiva <span>online</span></h1>
         <p class="present">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat,
-          ipsa doloremque dolorem velit hic.
+          ipsa doloremque dolorem velit hic. puta
         </p>
       </div>
     </div>
