modificando libreria js

--- a/index.html
+++ b/index.html
@@ -288,8 +288,9 @@
     <p class="derechos">Derechos reservados &copy; - Desarrollado por Jose Montivero, FullStack Developer</p>
   </footer>
   
-  <script src="js/raw.githubusercontent.com_jlmakes_scrollreveal_master_dist_scrollreveal.min.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/raw.githubusercontent.com_jlmakes_scrollreveal_master_dist_scrollreveal.min.js"></script>
+  <script src="js/scroll.js"></script>
 </body>
 
 </html>
