agregando funcionalidad en js, click-cierre

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div class="icon cancel-btn">
           <i class="fas fa-times"></i>
         </div>
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#about">Nosotros</a></li>
-        <li><a href="#choose">Elígenos</a></li>
-        <li><a href="#productos">Botines</a></li>
-        <li><a href="#zapatillas">Zapatillas</a></li>
-        <li><a href="#contacto">Contacto</a></li>
+        <li class="menu-list-item"><a href="#inicio">Inicio</a></li>
+        <li class="menu-list-item"><a href="#about">Nosotros</a></li>
+        <li class="menu-list-item"><a href="#choose">Elígenos</a></li>
+        <li class="menu-list-item"><a href="#productos">Botines</a></li>
+        <li class="menu-list-item"><a href="#zapatillas">Zapatillas</a></li>
+        <li class="menu-list-item"><a href="#contacto">Contacto</a></li>
       </ul>
       <div class="icon menu-btn">
         <i class="fas fa-bars"></i>
